--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Vite site to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["master"] # 或者 main，视您的主要分支而定
   workflow_dispatch:
 
 permissions:
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "20" # 根据您的项目需求选择适合的 Node.js 版本
           cache: "npm"
 
       - name: Install dependencies
@@ -32,13 +32,13 @@ jobs:
 
       - name: Build
         env:
-          VITE_AMAP_KEY: ${{ secrets.VITE_AMAP_KEY }}
+          VITE_AMAP_KEY: ${{ secrets.VITE_AMAP_KEY }} # 从 GitHub Secrets 中读取环境变量
         run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: dist # 构建输出目录
 
   deploy:
     needs: build
